test/end-to-end/compile-errors/extern-redundant.crow
main void() trusted
	info log if extern linux
		if extern linux
			"linux linux"
		else
			"just linux"
	else
		"not linux"
